--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,9 +6,25 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Und Gott sprach: \'\"Es werde Licht!\"\' Und es wurde Licht.\"\nGenesis 1:3</string>
   <string name="help_text">Menü-Knopf für Optionen\n\nKapitelnavigation ist mit dem Trackball, D-pad oder durch Querstreichen mit dem Finger möglich.</string>
+  <string name="help_nav_title">Navigation</string>
+  <string name="help_nav_text">Mit dem Finger wischen, um zwischen Kapiteln zu navigieren. Einmal auf den Bibeltext tippen, um den Vollbildmodus an- und auszuschalten. Bibelmodule haben oben rechts ein Menü, und das Fenstermenü kann über längeres Drücken aktiviert werden.</string>
+  <string name="help_speech_title">Sprache</string>
+  <string name="help_speech_text">\"Sprache\" antippen, um den Steuerungsdialog aufzurufen</string>
+  <string name="help_mynote_title">Eigene Notiz</string>
+  <string name="help_mynote_text">Notizen können über das \"Eigene Notiz\" Menü innerhalb des Kontextmenüs hinzugefügt werden. Die Liste der vorhandenen Notizen kann über das Hauptmenü angezeigt werden.</string>
+  <string name="help_bookmarks_title">Lesezeichen</string>
+  <string name="help_bookmarks_text">Lesezeichen können über das Kontextmenü hinzugefügt werden. Die Lesezeichenverwaltung wird über das Hauptmenü aktiviert. Die Lesezeichenverwaltung erlaubt das Gruppieren von Lesezeichen über Labels.</string>
+  <string name="help_search_title">Suche</string>
+  <string name="help_search_text">Suchtext kann Spezialzeichen wie *,?, AND, OR, NOT enthalten (siehe \"Apache Lucene - Query Parser Syntax für mehr Informationen)</string>
+  <string name="help_contextmenus_title">Kontextmenüs</string>
+  <string name="help_contextmenus_text">Ein langer Druck auf den Bibeltext öffnet das Kontextmenü für den aktuellen Vers. 
+Ein langer Druck auf ein Dokument öffnet den Auswahldialog zum Löschen oder zum Anzeigen weiterer Informationen.
+Ein langer Druck auf den Retourknopf öffnet die Chronik.
+</string>
   <string name="version_text">Version %s</string>
   <string name="no_sdcard_error">Bitte legen Sie eine SD-Karte ein und starten Sie And Bible neu.</string>
   <!--Main menu-->
+  <string name="menu">Menü</string>
   <string name="chooseBook">Dokument</string>
   <string name="selectPassage">Navigation</string>
   <string name="search">Suche</string>
@@ -18,6 +34,8 @@
   <string name="help">Hilfe</string>
   <string name="verse">Vers</string>
   <string name="administration">Verwaltung</string>
+  <string name="rate_application">Bewerten &amp; Beschreiben in Google Play</string>
+  <string name="chooce_document">Dokument auswählen</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Buchauswahl</string>
   <string name="choosePassageChapterName">Kapitelauswahl</string>
@@ -27,11 +45,13 @@
   <!--Search-->
   <string name="search_index">Suchindex</string>
   <string name="index_creation_required">Für die Suche ist ein Index nötig.\n\nIndices können heruntergeladen oder lokal erzeugt werden.\n\nHerunterladen ist schneller und ermöglicht mehr Suchfunktionen.\n\nEine funktionierende Internetverbindung ist zum Herunterladen von Indices nötig.\n</string>
+  <string name="search_index_unavailable">Leider ist die Indexerstellung nur unter Android 5.0 (Lollipop) oder höher möglich.</string>
   <string name="indexing_wait_msg">Nach erfolgreicher Indexerstellung werden Sie zum Suchdialog weitergeleitet.</string>
   <string name="index">Index</string>
   <string name="index_download">Download</string>
   <string name="index_not_available_for_download">Dieser Index kann nicht heruntergeladen werden.</string>
   <string name="index_create">Erzeuge</string>
+  <string name="rebuild_index">Index neu erstellen</string>
   <!--Tasks-->
   <string name="progress_status">Fortschritt</string>
   <string name="task_kill_warning">Diese Aufgaben dauern länger und könnten abgebrochen werden, wenn Sie zu einem anderen Programm wechseln.</string>
@@ -102,6 +122,7 @@
   <string name="prefs_request_sdcard_permission_title">Es gibt händisch installierte Dokumente</string>
   <string name="prefs_request_sdcard_permission_summary">Die Verwendung von eigenhändig im Ordner jsword auf der SD-Karte installierten Dokumenten  aktivieren</string>
   <!--Window-->
+  <string name="new_window">Neues Fenster</string>
   <string name="window">Fenster</string>
   <string name="windowClose">Schließen</string>
   <string name="windowMaximise">Maximiere</string>
@@ -139,6 +160,7 @@
   <string name="document_not_installed">Bitte \'%s\' herunterladen</string>
   <!--Install zip file-->
   <string name="install_zip">Lade Dokument aus Zip-Datei</string>
+  <string name="install_zip_module">Bibelmodul installieren</string>
   <string name="install_zip_successfull">Modul wurde erfolgreich installiert</string>
   <string name="extracting_zip_file">Zip-Datei wird entpackt...</string>
   <string name="checking_zip_file">Datei wird überprüft...</string>
@@ -234,6 +256,13 @@
   <string name="speak_advanced_settings">Erweitert</string>
   <string name="speak_sleep_timer_title">Zeitgeber</string>
   <string name="speak_no_books_available">Keine Bücher zum Vorlesen verfügbar</string>
+  <string name="repeat_passage">Abschnitt wiederholen</string>
+  <string name="set_repeat_passage_range">Bereich für die Wiederholung festlegen</string>
+  <string name="speak_beginning_of_passage">Abschnittsanfang festlegen</string>
+  <string name="speak_ending_of_passage">Abschnittsende festlegen</string>
+  <string name="speak_verse_range_to_repeat">Versbereich für Wiederholung festlegen</string>
+  <string name="speak_ending_verse_must_be_later">Der Endvers muss hinter dem Anfangsvers liegen</string>
+  <string name="conf_speak_synchronize">Text folgt der Sprachausgabe</string>
   <string name="conf_speak_auto_bookmark">Automatische Lesezeichen</string>
   <string name="conf_save_playback_settings_to_bookmarks">Spracheinstellungen mit Lesezeichen speichern</string>
   <string name="conf_replace_divinename">den Gottesnamen mit Jahwe wiedergeben</string>
@@ -241,6 +270,7 @@
   <string name="conf_change_title">Überschriften</string>
   <string name="conf_speak_footnotes">Fußnoten</string>
   <string name="conf_speak_sleep_timer">Zeit bis zum automatischen Ausschalten</string>
+  <string name="conf_speak_multitranslation">Alle sichtbaren Fenster vorlesen</string>
   <string name="sleep_timer_title">Ausschalten in Minuten</string>
   <string name="sleep_timer_set">Schaltuhr einstellen. Eingestellt auf%d Minuten</string>
   <string name="sleep_timer_started">Schaltuhr gestartet, noch%d Minuten</string>
@@ -250,6 +280,8 @@
   <string name="widget_toggle_sleep_timer">Schaltuhr ein-/ausschalten</string>
   <string name="widget_bookmark_helptext">Sprachlesezeichen scheinen hier auf</string>
   <string name="speak_status_stopped">angehalten</string>
+  <string name="speak_autobookmarking_disabled">Automatische Lesezeichen sind deaktiviert!</string>
+  <string name="system_speak_settings">Öffne die Systemsteuerung für Sprachausgabe</string>
   <string name="speak_bookmark_help">Sprachhilfe</string>
   <string name="speak_help_auto_bookmark">Ein Sprachlesezeichen wird automatisch hinzugefügt, wenn die Vorlesefunktion pausiert oder angehalten wird. Automatische Lesezeichen erhalten den Spezialmarker. Wenn die Vorlesefunktion an einem Sprachlesezeichen gestartet wird, wird das Lesezeichen automatisch an den Ort verschoben, an dem die Wiedergabe pausiert oder gestoppt wird. Nur Sprachlesezeichen werden verschoben, alle anderen Lesezeichen bleiben unberührt.</string>
   <string name="speak_help_playback_settings">Spezielle Einstellungen für die Wiedergaben (unter \"Wiedergabeeinstellungen\" im Sprachwiedergabefenster) werden mit den Lesezeichen gespeichert, wenn die Einstellung aktiviert ist. Wird die Wiedergabe von einem Lesezeichen gestartet, werden die speziellen Einstellungen mit dem Lesezeichen geladen.</string>
@@ -293,6 +325,7 @@
   <string name="mynote_view_edit">bearbeiten</string>
   <string name="mynote_saved">Notiz gespeichert</string>
   <!--Backup and restore-->
+  <string name="backup_and_restore">Sicherung &amp; Wiederherstellung</string>
   <string name="backup">Backup</string>
   <string name="backup_success">Notizen und Lesezeichen wurden in %s auf der SD-Karte gespeichert</string>
   <string name="restore">Wiederherstellen</string>
@@ -327,6 +360,7 @@
   <string name="new_item">Neu</string>
   <string name="close">Schließen</string>
   <string name="edit">Bearbeiten</string>
+  <string name="watch_tutorial_video">Tutorial ansehen (auf Englisch)</string>
   <!--Errors-->
   <string name="report_error">Fehlerbericht senden</string>
   <string name="error_occurred">Ein Fehler ist aufgetreten!</string>
