--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -6,9 +6,21 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\"Un Dievs sacīja: \'Lai top gaisma\' un gaisma tapa.\" \nGenesis 1:03</string>
   <string name="help_text">Lai piekļūtu darbībām nospiediet MENU taustiņu\n\nPārvietojieties no vienas nodaļas uz otru izmantojot track-ball, D-pad vai uzsitot uz ekrāna ar pirkstu</string>
+  <string name="help_nav_title">Navigācija</string>
+  <string name="help_nav_text">Pārejiet uz nākamo vai iepriekšējo nodaļu, ar pirkstu pavelkotekrānu.
+Lai pārslēgtu pilnekrāna režīmu, vienreiz pieskarieties pie Bībelesteksta. Bībeles logiem augšējā labajā stūrī ir izvēlnes poga,
+un varat piekļūt loga izvēlnei, to ilgāk nospiežot.</string>
+  <string name="help_speech_title">Runa</string>
+  <string name="help_speech_text">Nospiediet Runāt, lai piekļūtu dialogam un sāktu vai pārtrauktu lasīšanu</string>
+  <string name="help_mynote_title">Manas piezīmes</string>
+  <string name="help_mynote_text">Piezīmes var pievienot, izmantojot Manas piezīmes pantu izvēlnē  . Esošo piezīmju sarakstam var piekļūt, izmantojot galveno izvēlni.</string>
+  <string name="help_bookmarks_title">Grāmatzīmes</string>
+  <string name="help_search_title">Meklēt</string>
+  <string name="help_contextmenus_title">Konteksta izvēlnes</string>
   <string name="version_text">Versija %s</string>
   <string name="no_sdcard_error">Lūdzu, ievietojiet SD karti un startējiet And Bible vēlreiz.</string>
   <!--Main menu-->
+  <string name="menu">Izvēlne</string>
   <string name="chooseBook">Dokuments</string>
   <string name="selectPassage">Fragments</string>
   <string name="search">Atrast</string>
