--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -20,14 +20,34 @@
 \n\"En God zei: \'Er moet licht komen\' en er was licht.\"\nGenesis 1:3</string>
   <string name="help_text">Druk op de Menutoets voor acties\n\n\Ga naar het volgende of vorige hoofdstuk met behulp van de trackbal, het D-pad of veeg op het scherm met je vinger</string>
   <string name="help_nav_title">Navigatie</string>
+  <string name="help_nav_text">Ga naar het volgende of vorige hoofdstuk door met je vinger over het scherm te vegen.
+        Druk eenmaal op de bijbeltekst om over te schakelen naar de volledig scherm-modus. Bijbelvensters hebben rechtsboven een menuknop,
+        waarmee je het menu kunt openen d.m.v. lang indrukken.
+    </string>
   <string name="help_speech_title">Voorlezen</string>
+  <string name="help_speech_text">Druk op Voorlezen om een venster te openen waar je het voorlezen kunt starten of stoppen</string>
   <string name="help_mynote_title">Mijn notitie</string>
+  <string name="help_mynote_text">Notities kunnen worden toegevoegd via het menu-item Mijn Notitie in het bijbelvers-actiemenu.
+        De lijst met bestaande notities kan worden geopend via het hoofdmenu.</string>
   <string name="help_bookmarks_title">Bladwijzers</string>
+  <string name="help_bookmarks_text">Bladwijzers kunnen worden toegevoegd via het bijbelvers-actiemenu.
+        Bladwijzerbeheer kan worden geopend via het hoofdmenu.
+        Het actiemenu aldaar kan worden gebruikt om bladwijzers te groeperen met labels.
+    </string>
   <string name="help_search_title">Zoeken</string>
+  <string name="help_search_text">De zoekopdracht mag speciale tekens bevatten, zoals *, ?, AND, OR, NOT
+        (lees \"Apache Lucene - Query Parser Syntax\" voor meer informatie hierover)
+    </string>
   <string name="help_contextmenus_title">Actiemenu\'s</string>
+  <string name="help_contextmenus_text">
+        Houdt de Bijbelweergave lang ingedrukt om het actiemenu te openen voor het huidige vers.
+        Houdt een document in de documentkeuze lang ingedrukt om het te verwijderen of informatie te tonen.
+        Houdt de terugknop lang ingedrukt om de geschiedenislijst te openen.
+    </string>
   <string name="version_text">Versie %s</string>
   <string name="no_sdcard_error">Voer een SD-kaart in en start And Bible opnieuw.</string>
   <!--Main menu-->
+  <string name="menu">Menu</string>
   <string name="chooseBook">Document</string>
   <string name="selectPassage">Passage</string>
   <string name="search">Zoeken</string>
@@ -37,6 +57,8 @@
   <string name="help">Hulp</string>
   <string name="verse">Vers</string>
   <string name="administration">Administratie</string>
+  <string name="rate_application">Beoordelen in Google Play</string>
+  <string name="chooce_document">Document kiezen</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Kies een boek</string>
   <string name="choosePassageChapterName">Kies een hoofdstuk</string>
@@ -47,11 +69,13 @@
   <string name="search_index">Index doorzoeken</string>
   <string name="index_creation_required">Een index is nodig om te zoeken.\n\nIndexen kunnen worden gedownload van het internet of lokaal gecreëerd worden.\n\nDownloaden is veel sneller en gedownloade indexen bevatten meer zoekfuncties. \n\nEen internetverbinding is vereist om indexen te downloaden.
 </string>
+  <string name="search_index_unavailable">Helaas is het samenstellen van indexen alleen beschikbaar op Android 5.0 (Lollipop) en hoger.</string>
   <string name="indexing_wait_msg">Als het indexeren klaar is, zal het zoekscherm verschijnen.</string>
   <string name="index">Index</string>
   <string name="index_download">Downloaden</string>
   <string name="index_not_available_for_download">Deze index is niet beschikbaar om te downloaden</string>
   <string name="index_create">Creëren</string>
+  <string name="rebuild_index">Index opnieuw samenstellen</string>
   <!--Tasks-->
   <string name="progress_status">Voortgang</string>
   <string name="task_kill_warning">Deze langlopende taken kunnen beëindigd worden als je overschakelt naar een andere app.</string>
@@ -122,6 +146,7 @@
   <string name="prefs_request_sdcard_permission_title">Handmatige geïnstalleerde documenten</string>
   <string name="prefs_request_sdcard_permission_summary">Het gebruik van handmatig geïnstalleerde documenten inschakelen uit de jsword-map op de SD-kaart</string>
   <!--Window-->
+  <string name="new_window">Nieuw venster</string>
   <string name="window">Venster</string>
   <string name="windowClose">Sluiten</string>
   <string name="windowMaximise">Maximaliseren</string>
@@ -255,6 +280,12 @@
   <string name="speak_advanced_settings">Geavanceerde instellingen</string>
   <string name="speak_sleep_timer_title">Slaaptimer</string>
   <string name="speak_no_books_available">Geen voor te lezen boeken</string>
+  <string name="repeat_passage">Passage herhalen</string>
+  <string name="set_repeat_passage_range">Passageherhaling instellen</string>
+  <string name="speak_beginning_of_passage">Kies het begin van de passage</string>
+  <string name="speak_ending_of_passage">Kies het einde van de passage</string>
+  <string name="speak_verse_range_to_repeat">Kies de te herhalen verzen</string>
+  <string name="speak_ending_verse_must_be_later">Het laatste vers moet zich verder bevinden dan het eerste</string>
   <string name="conf_speak_synchronize">Tekst loopt synchroon met spraak</string>
   <string name="conf_speak_auto_bookmark">Automatische bladwijzers</string>
   <string name="conf_save_playback_settings_to_bookmarks">Afspeelinstellingen opslaan naar bladwijzers</string>
@@ -383,8 +414,4 @@
   <string name="download_documents">Bezig met downloaden van documenten...</string>
   <string name="notification_channel_tts_status">Tekst-naar-spraak</string>
   <string name="notification_channel_progress_status">Voortgangsmeldingen voor documentdownloads, etc.</string>
-  <string name="menu">Menu</string>
-  <string name="rate_application">Beoordelen in Google Play</string>
-  <string name="chooce_document">Document kiezen</string>
-  <string name="new_window">Nieuw venster</string>
 </resources>
