--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,24 +8,24 @@
   <string name="help_text">Appuyer sur la touche MENU pour toute action\n\nAller au chapitre suivant ou précédent en utilisant le track-ball, le D-pad ou en balayant l\'écran avec votre doigt</string>
   <string name="help_nav_title">Navigation</string>
   <string name="help_nav_text">Pour aller au chapitre suivant ou au précédent, balayez horizontalement l\'écran avec votre doigt.
-Un tapotement permet de basculer l\'affichage en mode plein écran et inversement. Les fenêtres ont un bouton d\'appel du menu en bas dans le coin droit,
-un appui prolongé sur ce bouton ouvre le menu.</string>
+Un tapotement permet de basculer l\'affichage en mode plein écran et inversement. Les fenêtres ont un bouton de menu en haut au coin droit,
+le menu s\'ouvre par un appui prolongé sur le bouton.</string>
   <string name="help_speech_title">Lecture audio</string>
-  <string name="help_speech_text">Activer Lecture audio ouvre la fenêtre permettant de démarrer ou arrêter la lecture à voix haute.</string>
+  <string name="help_speech_text">Sélectionner Lecture audio pour ouvrir la fenêtre permettant de démarrer ou arrêter la lecture à voix haute.</string>
   <string name="help_mynote_title">Mes notes</string>
-  <string name="help_mynote_text">Des notes peuvent être ajoutées via l\'option Ma note du menu contextuel de verset.
-La liste des notes existantes est accessible par le Menu général.</string>
+  <string name="help_mynote_text">Les notes s\'ajoutent via l\'option Mes notes du menu contextuel de chaque verset.
+La liste des notes existantes est accessible par le Menu principal.</string>
   <string name="help_bookmarks_title">Signets</string>
-  <string name="help_bookmarks_text">Un signet peut être ajouté via le menu contextuel de verset.
+  <string name="help_bookmarks_text">Vous pouvez ajouter un signet via le menu contextuel du verset.
 Le gestionnaire de signets est accessible par le Menu principal.
-Le gestionnaire des signets permet un classement des signets en utilisant des étiquettes.</string>
+Le menu du gestionnaire des signets permet de classer les signets par étiquettes.</string>
   <string name="help_search_title">Rechercher</string>
   <string name="help_search_text">La recherche de texte peut inclure des caractères spéciaux tels que *, ?, AND, OR, NOT
  (voir \"Apache Lucene - Query Parser Syntax\" pour plus de détails)</string>
-  <string name="help_contextmenus_title">Menus contectuels</string>
+  <string name="help_contextmenus_title">Menus contextuels</string>
   <string name="help_contextmenus_text">
-Faire un Appui prolongé sur un verset dans le texte biblique pour ouvrir le menu contextuel relatif à ce  verset.
-Dans le sélecteur de documents, un Appui prolongé sur un document affiche le menu contextuel permettant soit d\'obtenir les informations relatives à ce document, soit de le supprimer.
+Un Appui prolongé sur un verset dans le texte biblique ouvre le menu contextuel des actions applicables à ce verset.
+Un Appui prolongé sur un document dans le sélecteur de documents affiche le menu contextuel permettant soit de le supprimer, soit d\'afficher les informations relatives à ce document.
 Un Appui prolongé sur le bouton Retour ouvre l\'Historique de consultation.</string>
   <string name="version_text">Version %s</string>
   <string name="no_sdcard_error">Merci d\'insérer une carte SD et de redémarrer And Bible.</string>
@@ -40,8 +40,8 @@ Un Appui prolongé sur le bouton Retour ouvre l\'Historique de consultation.</st
   <string name="help">Aide</string>
   <string name="verse">Verset</string>
   <string name="administration">Gérer</string>
-  <string name="rate_application">Noter &amp; mettre un avis sur Google Play</string>
-  <string name="chooce_document">Choisir un document</string>
+  <string name="rate_application">Laisser un avis sur Google Play</string>
+  <string name="chooce_document">Ouvrir un document</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Sélectionner un livre</string>
   <string name="choosePassageChapterName">Sélectionner un chapitre</string>
@@ -50,9 +50,9 @@ Un Appui prolongé sur le bouton Retour ouvre l\'Historique de consultation.</st
   <string name="deuterocanonical">Deutérocanonique</string>
   <!--Search-->
   <string name="search_index">Recherche dans l\'index</string>
-  <string name="index_creation_required">Un index est requis pour exécuter cette recherche.\n\nLes index peuvent être téléchargés par Internet ou créés localement.\n\nLe téléchargement est beaucoup plus rapide et les index téléchargés offrent plus de fonctionnalités.\n\nUne connexion internet est requise pour pouvoir télécharger les index.</string>
-  <string name="search_index_unavailable">Malheureusement, la création d\'index n\'est disponible que sur Android 5.0 (Lollipop) ou version ultérieure.</string>
-  <string name="indexing_wait_msg">Quand l\'indexation sera terminée, vous serez redirigés sur la page de recherche</string>
+  <string name="index_creation_required">Un index est nécessaire pour pouvoir lancer une recherche.\n\nLes index peuvent être téléchargés par Internet ou créés localement.\n\nLe téléchargement est bien plus rapide et les index téléchargés offrent plus de capacités de recherche.\n\nUne connexion internet est requise pour pouvoir télécharger les index.</string>
+  <string name="search_index_unavailable">Malheureusement la création d\'index n\'est disponible que sur Android 5.0 (Lollipop) ou version ultérieure.</string>
+  <string name="indexing_wait_msg">Vous retrouverez la page de recherche à la fin de l\'indexation.</string>
   <string name="index">Index</string>
   <string name="index_download">Télécharger</string>
   <string name="index_not_available_for_download">Cet index n\'est pas disponible en téléchargement</string>
@@ -166,6 +166,7 @@ Un Appui prolongé sur le bouton Retour ouvre l\'Historique de consultation.</st
   <string name="document_not_installed">Merci de télécharger \'%s\'</string>
   <!--Install zip file-->
   <string name="install_zip">Charger un document au format Zip</string>
+  <string name="install_zip_module">Installe un module de Bible</string>
   <string name="install_zip_successfull">Le module a été installé avec succès</string>
   <string name="extracting_zip_file">Extraction du fichier Zip...</string>
   <string name="checking_zip_file">Vérification du fichier...</string>
@@ -261,18 +262,19 @@ Un Appui prolongé sur le bouton Retour ouvre l\'Historique de consultation.</st
   <string name="speak_advanced_settings">Paramètres avancés</string>
   <string name="speak_sleep_timer_title">Mise en sommeil</string>
   <string name="speak_no_books_available">Pas de livre disponible à écouter</string>
-  <string name="repeat_passage">Répétition de passage</string>
+  <string name="repeat_passage">Répéter un passage</string>
+  <string name="set_repeat_passage_range">Définir la plage de répétition de passage</string>
   <string name="speak_beginning_of_passage">Choisir le début du passage</string>
   <string name="speak_ending_of_passage">Choisir la fin du passage</string>
-  <string name="speak_verse_range_to_repeat">Sélectionner la série de versets à répéter</string>
-  <string name="speak_ending_verse_must_be_later">Le verset de fin doit se trouver dans la suite du verset de début.</string>
-  <string name="conf_speak_synchronize">Le texte suit la voix</string>
+  <string name="speak_verse_range_to_repeat">Définir la série de versets à répéter</string>
+  <string name="speak_ending_verse_must_be_later">Le verset de fin doit se situer après le verset de début.</string>
+  <string name="conf_speak_synchronize">Le texte défile en suivant la voix</string>
   <string name="conf_speak_auto_bookmark">Mise en signet automatique</string>
   <string name="conf_save_playback_settings_to_bookmarks">Enregistrer les paramètres audio dans les signets</string>
   <string name="conf_replace_divinename">Remplacer le nom divin par Yahvé</string>
-  <string name="conf_change_chapter">Changements de chapitre</string>
-  <string name="conf_change_title">Titres</string>
-  <string name="conf_speak_footnotes">Notes de bas de page</string>
+  <string name="conf_change_chapter">Nouveau chapitre</string>
+  <string name="conf_change_title">Titre</string>
+  <string name="conf_speak_footnotes">Note de bas de page</string>
   <string name="conf_speak_sleep_timer">Programmer la mise en sommeil</string>
   <string name="conf_speak_multitranslation">Lire dans toutes les fenêtres visibles</string>
   <string name="sleep_timer_title">Minuterie d\'arrêt en minutes</string>
@@ -282,10 +284,10 @@ Un Appui prolongé sur le bouton Retour ouvre l\'Historique de consultation.</st
   <string name="speak_next">Suivant</string>
   <string name="speak_previous">Précédent</string>
   <string name="widget_toggle_sleep_timer">Inverser la mise en sommeil</string>
-  <string name="widget_bookmark_helptext">Les signets audio s\'afficheront ici</string>
+  <string name="widget_bookmark_helptext">Ici s\'afficheront les raccourcis vers les signets audio de And Bible</string>
   <string name="speak_status_stopped">arrêt</string>
-  <string name="speak_autobookmarking_disabled">Mise automatique en signet désactivée! </string>
-  <string name="system_speak_settings">Ouvrir les Paramètres de la synthèse vocale</string>
+  <string name="speak_autobookmarking_disabled">Mise en signet automatique désactivée! </string>
+  <string name="system_speak_settings">Paramètres de la synthèse vocale</string>
   <string name="speak_bookmark_help">Aide des signets audio</string>
   <string name="speak_help_auto_bookmark">
 Un Signet audio est automatiquement généré lorsque la Lecture audio est mise sur pause ou arrêt. Ces signets ont pour label Lecture audio. Si vous avez redémarré l\'écoute à partir d\'un tel signet, celui-ci sera déplacé au verset où la Lecture audio sera mise en pause ou arrêt. Seuls les signets de type Lecture audio sont transposables, les autres signets restent inchangés.</string>
